MJ 11/09/05
- Some more classdocs cleanup, some refactoring of config property loading

MJ 10/09/05
- Revised the vector package again, including some major refactoring and
  complete revision of documentation.
- Changed the behavior of the vector observers, now they accept only one method
  to observe. Simplicity wins here over features.

MJ 09/09/05
- Went through the classdocs of the cdsim package, and revised/fixed/extended
  it significantly. Planning to do it with all the packages... 
- Small changes in WireGraph to support non-overly graphs better (see classdocs)
- NeighbourListGraph can now be constructed with a specified size
- Some documentation fixes

MJ 29/08/05
- Added possibility to look up protocol names based on pid in Configuration.
  Error messages should use that method instead of dumping the pid.

MJ 28/08/05
- Fixed a bug in Scheduler: now all times are realy long
- Also longified the Transport interface
- Added transport to FastConfig

MJ 21/08/05
- some minor documentation fixes
- CDScheduler can now accept a list of protocols instead of only one

MJ 19/08/05
- Implemented the Tarjan algorithm to detect the strongly connected components
  in GraphAlgorithms. ConnectivityObserver now has a "type" parameter that
  can be set to "scc" to get strongly connected components. Note that for
  large diameter, large strongly connected components we can get stack
  overflows because the implementation is recursive: it should be fixed soon!
  But until then better than nothing...

MJ 16/08/05
- minor fixes in the documentation
- WireFromFile now extends WireGraph

MJ 15/08/05
- Added MethodInvoker, a Control that can invoke a "void method()" type of
  method
- Some minor cleanup on error message printing

MJ 10/08/05
I added a number of changes, some of them will break existing config files:
- Refactoring the Wire* controls. They have a common superclass now and
  the NodeInitializer implementations were separated into separate classes